parser/tests/parser/complex/invalid/basic_7.mf2
.foo{:hello}
{{}}
=== spans ===
                    .foo{:hello}↵{{}}
ComplexMessage      ^^^^^^^^^^^^^^^^^
QuotedPattern                    ^^^^
Pattern             
=== diagnostics ===
Found a statement that is invalid because the keyword 'foo' is keyword. (at @0..12)
  .foo{:hello}↵{{}}
  ^^^^^^^^^^^^
=== ast ===
ComplexMessage {
    span: @0..17,
    declarations: [],
    body: QuotedPattern {
        span: @13..17,
        pattern: Pattern {
            parts: [],
        },
    },
}